--- a/Лаб-2. Завдання 2.ipynb
+++ b/Лаб-2. Завдання 2.ipynb
@@ -36,9 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
    "source": [
     "a = []\n",
     "print (type(a))"
@@ -56,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,9 +74,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a =  [1, 2, 3, 3, 4]\n",
+      "b =  [1, 2, 3, 3, 4, 1, 2, 3, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"a = \", a)\n",
     "print(\"b = \", b)"
@@ -90,6 +107,35 @@
     "# 3) вивести `id` списка\n",
     "# 4) додати до списка другий елемент з своїм прізвищем\n",
     "# 5) вивести отриманий список то його `id`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['olexandr', 'rudytskyy']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2832186178816"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i_am = [\"olexandr\", \"rudytskyy\"]\n",
+    "print(i_am)\n",
+    "id(i_am)"
    ]
   },
   {
@@ -115,11 +161,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 2832186193472\n",
+      "[1, 2, 3, 99999, 5] 2832186193472\n"
+     ]
+    }
+   ],
    "source": [
     "n = [1,2,3,4,5]\n",
     "print(n[3], id(n))\n",
@@ -136,9 +191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99999\n",
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "print(n[-2])\n",
     "n[-2] = 4\n",
@@ -158,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -203,6 +267,28 @@
     "# 2) написати код що виводить перші 5 єлементів\n",
     "# 3) написати код що виводить останні 6 єлементів\n",
     "# 4) написати код що виводить всі парні єлементи\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 9, 8, 7, 6]\n",
+      "[6, 5, 4, 3, 2, 1]\n",
+      "[10, 8, 6, 4, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_1 = [10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+    "print(list_1[:5])\n",
+    "print(list_1[4:])\n",
+    "print(list_1[::2])"
    ]
   },
   {
@@ -275,9 +361,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "spisok = [[1, 2], [3, 4]]\n",
     "print (spisok[0])\n",
@@ -298,6 +393,26 @@
     "# 1) створити вкладений список [[1,2,3], [4,5,6], [7,8,9]]\n",
     "# 2) написати код що замінює 4-ку на 42\n",
     "# 3) написати код що міняє місцями 3-ку та 5-ку"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 5], [42, 3, 6], [7, 8, 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_4 = [[1,2,3], [4,5,6], [7,8,9]]\n",
+    "list_4[1][0] = 42\n",
+    "list_4[0][2], list_4[1][1] = list_4[1][1], list_4[0][2]\n",
+    "print(list_4)"
    ]
   },
   {
@@ -326,11 +441,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(23,)\n",
+      "(1, 2, 'Вася', [43, 1.2], (55, '39'))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(k1)\n",
+    "print(kn)"
+   ]
   },
   {
    "cell_type": "code",
@@ -358,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -410,8 +542,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 2) 4529662304\n",
-      "(1, 2, 3) 4531036640\n"
+      "(1, 2) 2832184858752\n",
+      "(1, 2, 3) 2832214538880\n"
      ]
     }
    ],
@@ -423,14 +555,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4]\n"
+      "[1, 2, 4]\n"
      ]
     }
    ],
@@ -442,7 +574,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ML",
    "language": "python",
    "name": "python3"
   },
@@ -456,7 +588,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "05dae43f891782f6a613ad7bad17976f3f12f6fdb0b9e3f3c3e6faa59aed157a"
+   }
   }
  },
  "nbformat": 4,
