--- a/ML-lab_1.ipynb
+++ b/ML-lab_1.ipynb
@@ -939,7 +939,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ML",
    "language": "python",
    "name": "python3"
   },
@@ -953,7 +953,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "varInspector": {
    "cols": {
@@ -983,6 +983,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "05dae43f891782f6a613ad7bad17976f3f12f6fdb0b9e3f3c3e6faa59aed157a"
+   }
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
