--- a/Лаб-2. Завдання 3.ipynb
+++ b/Лаб-2. Завдання 3.ipynb
@@ -274,7 +274,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ML",
    "language": "python",
    "name": "python3"
   },
@@ -288,7 +288,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "05dae43f891782f6a613ad7bad17976f3f12f6fdb0b9e3f3c3e6faa59aed157a"
+   }
   }
  },
  "nbformat": 4,
